--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "url": ""
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "express-mailer": "^0.3.1",
+    "jade": "^1.11.0"
+  }
 }
