--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-mailer": "^0.3.1",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "morgan": "^1.8.1"
   }
 }
